
- As part of the support for FoundationDB, added function RDB_err_retryable()
  and read-only operator retryable() (the latter only being available in Duro D/T)
  to determine whether a failed operation should be restarted.

- Renamed lock_not_granted_error to concurrency_error.

- Fixed problems in ||, upper(), and lower() which could cause the string
  length being set incorrectly.

- Added support for NaN.

DuroDBMS 1.6

- GNU Libtool is no longer required on Windows.

- If POSIX regular expressions are not available, C++ regular expressions are used.

- Moved to Berkeley DB 18.1.

- Fixed bug in storing relations without attributes.

- Fixed bug in expression serialization.

- Fixed bug in secondary indexes of in-memory tables.

DuroDBMS 1.5

- Fixed bug that can cause WRAP to crash.

- Moved to OpenJDK 10.

DuroDBMS 1.4

- Added option to build DuroDBMS without Berkeley DB.

- Moved to Berkeley DB 6.2. (Not on Windows, because DuroDBMS does not work with
  Berkeley DB 6.2 on Windows XP)

- Fixed bug that prevented recreation of a renamed table.

- lower() and upper() convert multibyte characters.

- Fixed bug that caused memory leaks when dropping local variables.

- Fixed bug that made the interpreter crash when trying to access dropped local variables.

- Fixed creation of local tables with multiple keys when an environment is open.

- Fixed problem with updating private tables that could cause a tuple to disappear
  after an update that failed because of a key violation.

- Added handling of types with possible represenations to the REST server and its Java client.

- Java REST client: Fixed handling of arrays when converting from JSON.

DuroDBMS 1.3

- Added functions lower(), upper()

- Added backtick quoting of identifiers

- Added PostgreSQL support

- Added REST server srv/durod and Java client support for accessing a database using HTTP/REST.

- RDB_create_recmap() etc. return errors using an RDB_exec_context.

DuroDBMS 1.2
